--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ psycopg2==2.9.9
 djangorestframework==3.15.1
 djangorestframework-jwt==1.11.0
 djangorestframework_simplejwt==5.3.1
+django-cors-headers==4.3.1
+shortuuid==1.0.13
